<resources>
    <string name="app_name">Journal</string>

    <!--  Timeline  -->
    <string name="menu_item_timeline_tag">Tags</string>
    <string name="menu_item_timeline_date">Go to Date</string>
    <string name="menu_item_timeline_settings">Settings</string>

    <string name="list_item_timeline_today">Today</string>

    <string name="layout_timeline_empty">Looks empty here!</string>

    <!--  Editor/Viewer  -->
    <string name="alert_editor_save_title">Do you want to save or discard changes?</string>
    <string name="alert_editor_save_positive">Save</string>
    <string name="alert_editor_save_negative">Discard</string>

    <string name="alert_editor_delete_title">Are you sure you want to delete?</string>
    <string name="alert_editor_delete_positive">Yes</string>
    <string name="alert_editor_delete_negative">No</string>

    <string name="toast_editor_entry_saved">Entry saved!</string>
    <string name="toast_editor_entry_save_error">Error occurred while saving entry</string>
    <string name="toast_editor_entry_load_error">Failed to load entry</string>
    <string name="toast_editor_entry_deleted">Entry deleted!</string>
    <string name="toast_editor_entry_delete_error">Error occurred while deleting entry</string>
    <string name="toast_editor_entry_empty_error">Cannot save entry with empty fields!</string>

    <string name="menu_item_editor_delete">Delete</string>
    <string name="menu_item_editor_edit">Edit</string>
    <string name="menu_item_editor_preview">Preview</string>
    <string name="menu_item_editor_save">Save</string>

    <string name="layout_editor_entry_title_hint">Title</string>
    <string name="layout_editor_entry_content_hint">Content</string>
    <string name="layout_editor_entry_tags_hint">Tags</string>

    <!--  Settings  -->
    <string name="title_activity_settings">Settings</string>
    <string name="title_settings">Settings</string>

    <string name="title_settings_backup_import">Backup &amp; Import</string>
    <string name="pref_title_backup_json">Backup to JSON</string>
    <string name="pref_summary_backup_json">Export all entries to local storage in JSON format.</string>
    <string name="pref_title_import_json">Import from JSON backup</string>
    <string name="pref_summary_import_json">Import entries from a JSON backup.</string>

</resources>
