<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
            android:id="@+id/delete"
            android:icon="@drawable/ic_delete"
            app:iconTint="?attr/colorOnSurface"
            android:title="@string/menu_item_editor_delete"
            app:showAsAction="ifRoom">
    </item>
    <item
            android:id="@+id/edit"
            android:icon="@drawable/ic_edit"
            app:iconTint="?attr/colorOnSurface"
            android:title="@string/menu_item_editor_edit"
            app:showAsAction="ifRoom">
    </item>
    <item
            android:id="@+id/preview"
            android:icon="@drawable/ic_preview"
            app:iconTint="?attr/colorOnSurface"
            android:title="@string/menu_item_editor_preview"
            app:showAsAction="ifRoom">
    </item>
    <item
            android:id="@+id/save"
            android:icon="@drawable/ic_check"
            app:iconTint="?attr/colorOnSurface"
            android:title="@string/menu_item_editor_save"
            app:showAsAction="ifRoom">
    </item>
</menu>