<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
            android:id="@+id/menu_timeline_tag"
            android:icon="@drawable/ic_tag"
            app:iconTint="?attr/colorOnSurface"
            android:title="@string/menu_item_timeline_tag"
            app:showAsAction="ifRoom">
    </item>
    <item
            android:id="@+id/datePicker"
            android:icon="@drawable/ic_date_range"
            app:iconTint="?attr/colorOnSurface"
            android:title="@string/menu_item_timeline_date"
            app:showAsAction="ifRoom">
    </item>
    <item
            android:id="@+id/settings"
            android:icon="@drawable/ic_settings"
            app:iconTint="?attr/colorOnSurface"
            android:title="@string/menu_item_timeline_settings"
            app:showAsAction="ifRoom">
    </item>
</menu>
